feat: add respondInvite endpoint
